<resources>
    <string name="app_name">Quizado</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">Quizado</string>
    <string name="QuizTitle">Quiz Title</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="view_quiz">View Quiz</string>
    <string name="total_questions">Total Questions</string>
    <string name="last_score">Your Last Score</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="loading_quiz">Loading Quiz</string>
    <string name="question">Question</string>
    <string name="option_button">Option Button</string>
    <string name="verifying_answer">Verifying Answer</string>
    <string name="next_question">Next Question</string>
    <string name="wrong_answer_quiz">Wrong answer \n Correct Answer: %1$s</string>
    <string name="questions_missed">Questions Missed</string>
    <string name="results">Results</string>
    <string name="go_to_home">Go To Home</string>
    <string name="checking_user_account">Checking user account…</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="time_up_message">Time Up! No answer was submitted</string>
    <string name="close_button">close button</string>
    <string name="create_account">Creating Account…</string>
    <string name="account_created">Account Created…</string>
    <string name="logged_in">Logged in…</string>
    <string name="not_available">NA</string>
    <string name="detail">Detail</string>
    <string name="title_quiz_question">%1$s (%2$d/%3$d)</string>
    <string name="about">About</string>
    <string name="one_hundred_percent">100%</string>
    <string name="dark_mode">Dark mode</string>
    <string name="Settings">Settings</string>
    <string name="login">Login</string>
    <string name="about_desc">Quizado is a quiz application where you can answer any of the quizzes</string>
    <string name="share">Share</string>
    <string name="share_text">I just got %1$d/%2$d on Quizado\'s %3$s quiz!</string>
    <string name="leaders">Leaders</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="leaders_name">Leaders Name</string>
    <string name="score">Score</string>
    <string name="cup">Cup</string>
    <string name="please_click_back_again">Please click BACK again to exit</string>
    <string name="quizzes">Quizzes</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="share_app">Share app</string>
    <string name="logout">Logout</string>
    <string name="account_details">Account Details</string>
    <string name="quiz">Quiz</string>
    <string name="home">Home</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="recent_results">Recent Results</string>
    <string name="category">Category</string>
    <string name="result_status">Result Status</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="score_over">%1$d/%2$d</string>
    <string name="score_percentage">%1$d%%</string>
    <string name="empty">--</string>
    <string name="congrats_message">Congrats you passed the Quiz for %1$s</string>
    <string name="failed_message">You failed the quiz for %1$s. Play again to score better</string>
    <string name="image_result">Image Result</string>
    <string name="play_again">Play Again</string>
    <string name="congratulations">CONGRATS!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="send_question">Send Question</string>
    <string name="write_your_question">Write your Question</string>
    <string name="write_correct_answer">Write correct answer</string>
    <string name="write_wrong_answer">Write wrong answer</string>
    <string name="send">Send</string>
    <string name="invalid_question">Question not supported</string>
    <string name="sign_in">Sign In</string>
    <string name="navigate_up">Navigate up</string>
    <string name="return_home">Return Home</string>
    <string name="Retry">retry</string>
    <string name="welcome_to_quizado">Welcome to Quizado, \n Please select the Sign In button to get started.</string>
    <string name="lady_with_paper">Lady with paper</string>
    <string name="dialog_sign_out_content">All saved data remain synced to your account.</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_battery">Set by Battery Saver</string>
    <string name="featured_quiz">Featured Quiz</string>
    <string name="for_you">For You</string>
    <string name="trending_today">Trending Today</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="all_time">All Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
