<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sendQuestionFragment"
            android:icon="@drawable/ic_send"
            android:title="@string/send_question" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings" />
    </group>

    <group android:id="@+id/nav_second_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/acknowlegementsFragment"
            android:icon="@drawable/ic_heart"
            android:title="@string/acknowledgements" />
    </group>

</menu>