<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.result.ResultFragment"
        android:paddingBottom="@dimen/detail_padding_bottom">

        <TextView
            android:id="@+id/results_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/try_again"
            tools:textColor="@color/colorCorrect" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_title"
            tools:src="@drawable/ic_success" />

        <TextView
            android:id="@+id/result_message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/merriweather"
            android:textAlignment="center"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_progress"
            tools:text="@string/congrats_message" />

        <TextView
            android:id="@+id/results_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorOnBackground"
            android:textSize="@dimen/text_size_h1"
            app:layout_constraintBottom_toBottomOf="@+id/results_progress"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/results_progress"
            tools:text="06/10" />

        <ProgressBar
            android:id="@+id/results_progress"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:progress="100"
            android:progressDrawable="@drawable/circular_progess"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/results_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hundred_percent"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="@+id/results_progress"
            app:layout_constraintEnd_toEndOf="@+id/results_progress"
            app:layout_constraintStart_toStartOf="@+id/results_progress"
            app:layout_constraintTop_toTopOf="@+id/results_progress" />

        <Button
            android:id="@+id/results_share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/primary_btn_bg"
            android:drawableEnd="@drawable/ic_share"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/result_message_text" />

        <Button
            android:id="@+id/results_play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/primary_btn_bg"
            android:drawableEnd="@drawable/ic_replay"
            android:text="@string/play_again"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_message_text" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
