<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="quizListModel"
            type="com.heathkev.quizapp.data.QuizListModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dark_bg">

        <androidx.cardview.widget.CardView
            android:id="@+id/quiz_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorDark"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/list_image"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/QuizTitle"
                android:scaleType="centerCrop"
                app:imageUrl="@{quizListModel.image}"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/image_cover_view"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/image_cover"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@id/quiz_card"
            app:layout_constraintEnd_toEndOf="@id/quiz_card"
            app:layout_constraintStart_toStartOf="@id/quiz_card" />

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/crimson_text"
            android:text="@{quizListModel.name}"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_card"
            tools:text="@string/QuizTitle" />

        <TextView
            android:id="@+id/list_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/work_sans"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_title"
            app:lineHeight="28dp"
            app:truncate="@{quizListModel.desc}"
            tools:text="@string/quiz_description" />

        <TextView
            android:id="@+id/list_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/work_sans"
            android:text="@{quizListModel.level}"
            android:textColor="@color/colorLightText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_desc"
            tools:text="@string/difficulty" />

        <Button
            android:id="@+id/list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/list_btn_bg"
            android:padding="12dp"
            android:text="@string/view_quiz"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_difficulty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>