<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/leaders_list_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        app:cardCornerRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/category"
                />

            <TextView
                android:id="@+id/home_result_quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/merriweather"
                android:text="@string/QuizTitle"
                android:textSize="@dimen/text_size_tiny"
                app:layout_constraintBottom_toTopOf="@+id/home_result_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_result_title" />

            <TextView
                android:id="@+id/home_result_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="06/10"
                android:textColor="@color/colorOnBackground"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/home_result_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/result_status"
                android:textSize="@dimen/text_size_tiny"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/home_result_score"
                app:layout_constraintEnd_toEndOf="parent" />


            <ProgressBar
                android:id="@+id/home_result_progress"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:progress="50"
                android:progressDrawable="@drawable/circular_progess"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/results_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_hundred_percent"
                android:textColor="@color/secondaryColor"
                app:layout_constraintBottom_toBottomOf="@+id/home_result_progress"
                app:layout_constraintEnd_toEndOf="@+id/home_result_progress"
                app:layout_constraintStart_toStartOf="@+id/home_result_progress"
                app:layout_constraintTop_toTopOf="@+id/home_result_progress" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</layout>